2024/04/19 v2.7 RedPacket： 1.分离红包响应结果和登录响应结果。 2.解决消息发送失败时红包结果key由于没有设置有效期且无法被访问而导致泄漏的问题。 3.修复了缓存命中率计算存在的问题。 4.将发起抢红包时访问Redis的lua脚本替换为管道操作。 5.修复了日志工厂类没有从配置的路径读取配置文件的问题。 6.进行可部署的调整，主要包括部署脚本和配置文件。 7.解决jar包内外的文件资源的读取路径问题。 8.补充了红包key合法性验证中的长度验证。 9.使用更高版本的redisson替代与springboot版本匹配的redisson起步依赖，以解决低版本redisson中netty域名解析问题导致的docker容器中无法解析redis域名的问题。